# hexlet-code

./: .gitignore  Makefile  README.md  brain-calc-loss.cast  brain-calc-win.cast  brain-even-loss.cast  brain-even-win.cast  brain-gcd-loss.cast  brain-gcd-win.cast  pyproject.toml
brain_games/: engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
