[project]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games project"
authors = [{name = "evsuk", email = "evsukovaaleksandra857@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["prompt"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
