[project]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games project"
authors = [{name = "evsuk", email = "evsukovaaleksandra857@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["prompt"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = ["ruff>=0.14.10"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[tool.ruff]
target-version = "py310"
line-length = 80

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "YTT", # flake8-2020
]
ignore = ["E501"]  # Игнорируем длину строки — ruff сам её форматирует

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
